manifests-successful/k8tz-0.16.2.tgz-manifest.yaml
---
# Source: k8tz/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8tz
  labels:
    k8tz.io/controller-namespace: "true"
    helm.sh/chart: k8tz-0.16.2
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.16.2"
    app.kubernetes.io/managed-by: Helm
---
# Source: k8tz/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release
  namespace: k8tz
  labels:
    helm.sh/chart: k8tz-0.16.2
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.16.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: my-release
---
# Source: k8tz/templates/controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-k8tz
  namespace: k8tz
  labels:
    helm.sh/chart: k8tz-0.16.2
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.16.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: k8tz
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        checksum/config: ec1936f8dc0a05371edd133781091bec198463e6c51b604eb827c557f3e18668
      labels:
        app.kubernetes.io/name: k8tz
        app.kubernetes.io/instance: my-release
    spec:
      volumes:
      - name: tls
        secret:
          secretName: my-release-k8tz-tls
      serviceAccountName: my-release-k8tz
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: k8tz
          args:
          - "webhook"
          - "--timezone"
          - "UTC"
          - "--injection-strategy"
          - "initContainer"
          - "--inject=true"
          - "--container-name=k8tz"
          - "--bootstrap-image"
          - "quay.io/k8tz/k8tz:0.16.2"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: "quay.io/k8tz/k8tz:0.16.2"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: tls
              mountPath: /run/secrets/tls
              readOnly: true
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: https
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /health
              port: https
              scheme: HTTPS
          resources:
            {}
---
# Source: k8tz/templates/admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release-k8tz
  labels:
    helm.sh/chart: k8tz-0.16.2
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.16.2"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: admission-controller.k8tz.io
    namespaceSelector:
      matchExpressions:
      - key: k8tz.io/controller-namespace
        operator: NotIn
        values: ["true"]
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - k8tz
        - kube-system
    sideEffects: None
    failurePolicy: Fail
    admissionReviewVersions: ["v1", "v1beta1"]
    clientConfig:
      service:
        name: my-release
        namespace: k8tz
        path: "/"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKakNDQWc2Z0F3SUJBZ0lSQUlmamY0bmJMTDZ1R3FjKy9qMkFVKzR3RFFZSktvWklodmNOQVFFTEJRQXcKSGpFY01Cb0dBMVVFQXhNVGJYa3RjbVZzWldGelpTNXJPSFI2TG5OMll6QWVGdzB5TkRBMk1qQXhORFUzTVRWYQpGdzB6T0RBMk1qRXhORFUzTVRWYU1CNHhIREFhQmdOVkJBTVRFMjE1TFhKbGJHVmhjMlV1YXpoMGVpNXpkbU13CmdnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUM5d01RQWthdkhveENzeHdiSTRVd0sKdmlDbjZ0TERLL2lVaktldGZzSEV2SU5JcklqYWRUVjdHVGdsZlBtWGRRNTY4L3Z6blVkUHZ5TDVoOXB2SFBURgpLR0x6azF3NzM2 [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
      - operations: [ "CREATE" ]
        apiGroups: ["batch"]
        apiVersions: ["v1"]
        resources: ["cronjobs"]
---
# Source: k8tz/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-k8tz-health-test"
  namespace: k8tz
  labels:
    helm.sh/chart: k8tz-0.16.2
    app.kubernetes.io/name: k8tz
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.16.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: curl
      image: curlimages/curl:7.78.0
      args: ['--insecure', 'https://my-release:443/health']
  restartPolicy: Never
